src/objects/actionHub__Log__c.object
<CustomObject>
    <description>actionHub Log</description>
    <fields>
        <fullName>actionHub__ActionQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Queue Id</label>
        <referenceTo>actionHub__ActionQueue__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actionHub__ConnectionName__c</fullName>
        <label>Connection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__DateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actionHub__EventQueueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Queue Id</label>
        <referenceTo>actionHub__EventQueue__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actionHub__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Trace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actionHub__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnection__c</fullName>
        <formula>actionHub__EventQueueId__r.actionHub__SourceConnection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectDisplayName__c</fullName>
        <formula>actionHub__EventQueueId__r.actionHub__SourceObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetConnection__c</fullName>
        <formula>actionHub__ActionQueueId__r.actionHub__TargetConnection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetObject__c</fullName>
        <formula>actionHub__ActionQueueId__r.actionHub__TargetObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Object</label>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>actionHub__AllActionHandler</fullName>
        <columns>NAME</columns>
        <columns>actionHub__DateTime__c</columns>
        <columns>actionHub__LogType__c</columns>
        <columns>actionHub__Source__c</columns>
        <columns>actionHub__Message__c</columns>
        <columns>actionHub__EventQueueId__c</columns>
        <columns>actionHub__ActionQueueId__c</columns>
        <columns>actionHub__ConnectionName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__Source__c</field>
            <operation>contains</operation>
            <value>ActionHandler</value>
        </filters>
        <label>ActionHandler</label>
    </listViews>
    <listViews>
        <fullName>actionHub__AllLogEntries</fullName>
        <columns>NAME</columns>
        <columns>actionHub__DateTime__c</columns>
        <columns>actionHub__LogType__c</columns>
        <columns>actionHub__Source__c</columns>
        <columns>actionHub__Message__c</columns>
        <columns>actionHub__EventQueueId__c</columns>
        <columns>actionHub__ActionQueueId__c</columns>
        <columns>actionHub__ConnectionName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Log Entries</label>
    </listViews>
    <listViews>
        <fullName>actionHub__ConditionReports</fullName>
        <columns>NAME</columns>
        <columns>actionHub__DateTime__c</columns>
        <columns>actionHub__LogType__c</columns>
        <columns>actionHub__Source__c</columns>
        <columns>actionHub__Message__c</columns>
        <columns>actionHub__EventQueueId__c</columns>
        <columns>actionHub__ActionQueueId__c</columns>
        <columns>actionHub__ConnectionName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__Source__c</field>
            <operation>startsWith</operation>
            <value>EventHandler.evaluateRuleConditions(ID,Objects.ActionDataObject)</value>
        </filters>
        <label>Rule Condition Reports</label>
    </listViews>
    <listViews>
        <fullName>actionHub__DebugOnly</fullName>
        <columns>NAME</columns>
        <columns>actionHub__DateTime__c</columns>
        <columns>actionHub__LogType__c</columns>
        <columns>actionHub__Source__c</columns>
        <columns>actionHub__Message__c</columns>
        <columns>actionHub__EventQueueId__c</columns>
        <columns>actionHub__ActionQueueId__c</columns>
        <columns>actionHub__ConnectionName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__LogType__c</field>
            <operation>equals</operation>
            <value>Debug</value>
        </filters>
        <label>Debug Only</label>
    </listViews>
    <listViews>
        <fullName>actionHub__ErrorsOnly</fullName>
        <columns>NAME</columns>
        <columns>actionHub__DateTime__c</columns>
        <columns>actionHub__LogType__c</columns>
        <columns>actionHub__Source__c</columns>
        <columns>actionHub__Message__c</columns>
        <columns>actionHub__EventQueueId__c</columns>
        <columns>actionHub__ActionQueueId__c</columns>
        <columns>actionHub__ConnectionName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Errors Only</label>
    </listViews>
    <listViews>
        <fullName>actionHub__RESTCalloutReports</fullName>
        <columns>NAME</columns>
        <columns>actionHub__DateTime__c</columns>
        <columns>actionHub__LogType__c</columns>
        <columns>actionHub__Source__c</columns>
        <columns>actionHub__Message__c</columns>
        <columns>actionHub__EventQueueId__c</columns>
        <columns>actionHub__ActionQueueId__c</columns>
        <columns>actionHub__ConnectionName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>actionHub__Source__c</field>
            <operation>startsWith</operation>
            <value>RESTAdapter Callout R</value>
        </filters>
        <label>RESTAdapter Callout Reports</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Log Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>